--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thorin-plugin-less",
-  "author": "Stiudeo",
-  "version": "1.0.7",
+  "author": "UNLOQ Systems",
+  "version": "1.0.9",
   "dependencies": {
     "less": "2.6.1"
   },
